@@ -1,3 +1,8 @@
+2008-09-13  Daniel Kraft  <d@domob.eu>
+
+	PR fortran/35770
+	* gfortran.dg/implicit_12.f90: New test.
+
 2008-09-11  Daniel Kraft  <d@domob.eu>
 
 	PR fortran/36214
